# FYP

./: .gitignore
PIZZA/: CMakeLists.txt  GraphCreation.cpp  main.cpp  plotter.py
PIZZA/Genetic Algorithms/heuristics/fitness_functions/: NumberOfOnes.cpp
PIZZA/Genetic Algorithms/include/: Breeder.h  Evolver.h  GeneticSolver.h  Genome.h  Picker.h
PIZZA/Genetic Algorithms/src/: GeneticSolver.cpp  Genome.cpp
PIZZA/SimulatedAnealing/: AcceptanceEvaluator.cpp  AcceptanceEvaluator.h  CostEvaluator.cpp  CostEvaluator.h  SAState.cpp  SAState.h  SA_HyperParameters.h  SimulatedAnealing.cpp  SimulatedAnealing.h  main.cpp
PIZZA/SimulatedAnealing/plotter/: heuristic.txt  non-heuristic.txt
PIZZA/algorithms/: BruteForce.cpp  BruteForce.h  Brute_force.cpp  Brute_force.h  Greedy.cpp  Greedy.h  Score.cpp
PIZZA/algorithms/SimulatedAnealing/: AcceptanceEvaluator.cpp  CostEvaluator.cpp  CostEvaluator.h  SimulatedAnealing.cpp  SimulatedAnealing.h
PIZZA/algorithms/aco/: aco.cpp  aco.h  evaporatePheromone.cpp  intialisePheromone.cpp  parametersDetails.txt  replenishPheromone.cpp  runAnts.cpp
PIZZA/genetic_algorithm/: main.cpp
PIZZA/genetic_algorithm/heuristics/fitness_functions/: CountAndSum.cpp  CountAndSum.h  NumberOfOnes.cpp  NumberOfOnes.h  SumOfDegrees.cpp  SumOfDegrees.h
PIZZA/genetic_algorithm/include/: Breeder.h  Evolver.h  GeneticConstants.h  GeneticSolver.h  Genome.h  Picker.h
PIZZA/genetic_algorithm/src/: GeneticSolver.cpp  Genome.cpp
PIZZA/heuristics/: Greedy.cpp  Greedy.h  RandomGreedy.cpp  RandomGreedy.h  RandomInit.cpp  RandomInit.h
PIZZA/shared/: Graph.cpp  Graph.h  Input.cpp  Input.h  Output.cpp  Output.h  Score.cpp  Score.h  utils.cpp  utils.h
PIZZA/test_data/: C250-9.txt  C500-9.txt  brock200-2.txt  brock400-1.txt  brock400-2.txt  c-fat200-1.txt  c-fat200-2.txt  c-fat200-5.txt  c-fat500-1.txt  e.txt  f.txt  gen200-p0-9-44.txt  gen400-p0-9-55.txt  gen400-p0-9-65.txt  gen400-p0-9-75.txt  hamming6-2.txt  p-hat300-3.txt  san200-0-7-2.txt  san200-0-9-1.txt  san400-0-7-1.txt  san400-0-7-2.txt
STREAMING/: CMakeLists.txt  main.cpp  plotter.py
STREAMING/SimulatedAnealing/: AcceptanceEvaluator.cpp  AcceptanceEvaluator.h  CostEvaluator.cpp  CostEvaluator.h  SAState.cpp  SAState.h  SA_HyperParameters.h  SimulatedAnealing.cpp  SimulatedAnealing.h  main.cpp  plotter.py
STREAMING/SimulatedAnealing/plotter/: heuristic.txt  non-heuristic.txt
STREAMING/aco/: Graph.cpp  Graph.h  aco.cpp  aco.h  evaporatePheromone.cpp  initializePheromone.cpp  replenishPheromone.cpp  runAnts.cpp
STREAMING/genetic/: main.cpp
STREAMING/genetic/heuristics/fitness_functions/: CacheUtilisation.cpp  CacheUtilisation.h  TimeSaved.cpp  TimeSaved.h  VideosStored.cpp  VideosStored.h
STREAMING/genetic/include/: Breeder.h  Evolver.h  GeneticConstants.h  GeneticSolver.h  Genome.h  Picker.h
STREAMING/genetic/src/: GeneticSolver.cpp  Genome.cpp
STREAMING/heuristics/: Greedy.cpp  Greedy.h  RandomGreedy.cpp  RandomGreedy.h
STREAMING/shared/: Input.cpp  Input.h  Output.h  Score.cpp  Score.h
STREAMING/test_data/: A.txt  B.txt  C.txt  D.txt  E.txt  F.txt  G.txt  H.txt  I.txt  main.cpp
lib/: LPSolver.cpp  LPSolver.h
